app/static/css/styles_updated.css
/*!
 * Start Bootstrap - Scrolling Nav (https://startbootstrap.com/template-overviews/scrolling-nav)
 * Copyright 2013-2019 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-scrolling-nav/blob/master/LICENSE)
 */
header {
  font-family: futura;
  background-position: center; 
}

section {
  padding: 40px 0 40px;
  font-family: futura;
}

footer {
  font-family: futura;
}

nav {
  font-family: futura;
}

.section-about {
  padding: 0px 0 50px;
}

.section-contact {
  padding: 30px 0 30px;
  background-color: #F5F5F5;
}

.blog-header {
  height: 0px;
}

.img-logo {
   width: 250px;
   padding-bottom: 5px;
}

.img-center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 75%;
}

.img-footer {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 90%;
}

.img-blog {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 60%;
}

.icon-div {
  text-align: center;
  margin-top: -100px;
}

.icon-link {
  padding: 0 20px 0 20px;
  width: 100px;
  height: 60px;
}

@font-face {
  font-family: futura;
  src: url('/static/fonts/Futura-Medium.woff');
}

